# vishals9711

./: .eslintrc.json  .gitignore  PROJECT_README.md  README.md  README.md.backup  README.template.md  TESTING_SUMMARY.md  action.yml  biome.json  env.example  package.json  pnpm-lock.yaml  pyproject.toml  test_apis.py  test_apis_comprehensive.py  test_wakatime.py  tsconfig.json  update_secrets_guide.py
.github/workflows/: pr-checks.yml  profile-update.yml
.kiro/specs/profile-dynamo/: design.md  requirements.md  tasks.md
docs/: 1.md
scripts/: __init__.py  data-processor.js  data_processor.py  error_handling.py  github-client.js  github_client.py  llm-client.js  models.py  profile-updater.js  profile_updater.py  template-engine.js  template_engine.py  update_profile.py  wakatime-client.js  wakatime_client.py
scripts/nodejs/: data-processor.js
src/: index.js  index.ts
src/clients/: githubClient.js  githubClient.ts  llmClient.js  llmClient.ts  wakatimeClient.js  wakatimeClient.ts
src/config/: config.ts
src/services/: dataService.js  dataService.ts  templateService.js  templateService.ts
src/types/: github.ts  index.ts  llm.ts  services.ts  wakatime.ts
src/utils/: badgeGenerator.ts
tests/: __init__.py  test_data_processor.py  test_error_handling.py  test_github_client.py  test_models.py  test_template_engine.py  test_wakatime_client.py
